@@ -2659,6 +2659,13 @@ test(966, fread(input, colClasses=list(character=2:4)), error="Column number 4 (
 # Character input more than 4096 bytes (used to be passed through path.expand which imposed the limit), #2649
 test(967, nrow(fread( paste( rep('a\tb\n', 10000), collapse=''), header=FALSE)), 10000L)
 
+# fread skip override
+input = "some,bad,data\nA,B,C\n1,3,5\n2,4,6\n"
+test(968, fread(input), data.table(some=c("A",1:2),bad=c("B",3:4),data=c("C",5:6)))
+test(969, fread(input, skip=1), data.table(A=1:2,B=3:4,C=5:6))
+test(970, fread(input, skip=2), data.table(V1=1:2,V2=3:4,V3=5:6))
+test(971, fread(input, skip=2, header=TRUE), data.table("1"=2L,"3"=4L,"5"=6L))
+
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 # TO DO: tests on double in add hoc by
